[package]
name = "bevy_curvo"
version = "0.1.1"
edition = "2021"
authors = ["Masatatsu Nakamura <masatatsu.nakamura@gmail.com>"]
categories = ["rendering", "modeling"]
description = "NURBS modeling plugin for Bevy"
repository = "https://github.com/mattatz/bevy_curvo"
homepage = "https://github.com/mattatz/bevy_curvo"
keywords = ["bevy", "gamedev", "graphics", "modeling"]
license = "MIT"
readme = "README.md"

[dependencies]
anyhow = "1.0.81"
nalgebra = { version = "0.32.5", features = [
  "serde-serialize",
  "convert-glam025",
] }
bevy_infinite_grid = { version = "0.12", optional = true }
bevy_normal_material = { version = "0.5.0", optional = true }
bevy_panorbit_camera = { version = "0.17.0", optional = true }
bevy_points = { version = "0.5.1", optional = true }
bevy_mod_raycast = { version = "0.17.0", optional = true }
bevy_egui = { version = "0.27.0", optional = true }
curvo = "0.1.3"

[dependencies.bevy]
default-features = false
features = ["bevy_render"]
version = "0.13.2"

[features]
default = []
# default = ["examples"] # for debug a example
"examples" = [
  "bevy/bevy_core_pipeline",
  "bevy/bevy_gizmos",
  "bevy/bevy_winit",
  "bevy/x11",
  "dep:bevy_infinite_grid",
  "dep:bevy_normal_material",
  "dep:bevy_panorbit_camera",
  "dep:bevy_points",
  "dep:bevy_mod_raycast",
  "dep:bevy_egui",
]

[[example]]
name = "scene"
required-features = ["examples"]
